--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,34 @@
   </head>
 
   <body>
+    <header class="header">
+      <div class="header__bar row">
+        <%= link_to image_tag("logo-chatdiary.png",class:"chatdiary-icon"), "/" %>
+        <% if user_signed_in? %>
+          <div class="user_nav grid-6">
+            <span><%= current_user.nickname %>
+              <ul class="user__info">
+                <li>
+                  <%= link_to "マイページ", "/users/#{current_user.id}" %>
+                  <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+                </li>
+              </ul>
+            </span>
+            <%= link_to "投稿する", new_diary_path, class: "post" %>
+          </div>
+        <% else %>
+          <div class="grid-6">
+            <%= link_to "ログイン", new_user_session_path, class: "post" %>
+            <%= link_to "新規登録", new_user_registration_path, class: "post" %>
+          </div>
+        <% end %>
+      </div>
+    </header>
     <%= yield %>
+    <footer>
+      <p>
+        Copyright ChatDiary 2020.
+      </p>
+    </footer>
   </body>
 </html>
