--- a/app/views/diaries/new.html.erb
+++ b/app/views/diaries/new.html.erb
@@ -1,7 +1,7 @@
 <%# Formオブジェクトにしたい新規投稿画面ビュー %> 
 <div class="contents row">
   <div class="container">
-    <h3>日記投稿</h3>
+    <h3>New Diary</h3>
     <%= form_with(model: @user_post, url: diaries_path, method: :post, local: true) do |f| %>
       <%= render 'shared/error_messages', model: f.object %>
 
@@ -10,7 +10,7 @@
       <%= f.text_field :title, placeholder: "Title" %>
       <%= f.text_area :content, placeholder: "Diary", rows: "8" %>
       
-      <h2>単語・英語表現</h2>
+      <h2>Vocabulary</h2>
       <%= f.text_field :word_name, placeholder: "Vocabulary" %>
       <%= f.text_area :example, placeholder: "Example", rows: "5" %>
       <%= f.submit "SEND" %>
