--- a/app/views/diaries/search.html.erb
+++ b/app/views/diaries/search.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(url: search_diaries_path, local: true, method: :get, class: "search-form") do |f| %>
-  <%= f.text_field :keyword, placeholder: "日記内容・英単語から検索する", class: "search-input" %>
+  <%= f.text_field :keyword, placeholder: "日記・英単語を検索する", class: "search-input" %>
   <%= f.submit "Search", class: "search-btn" %>
 <% end %>
 
@@ -12,7 +12,7 @@
         <span class="name">
           <a href="/users/<%= diary.user.id %>">
             <td><%= l diary.created_at, format: :default %></td>
-            <span>   PostBy: </span><%= diary.user.nickname %>
+            <span>PostBy:</span><%= diary.user.nickname %>
           </a>
         </span>
       <% end %>
